be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-backend-service
  namespace: online-shop
spec:
  selector:
    app: online-shop-backend
  ports:
    - protocol: TCP 
      port: 5214
      targetPort: 5214
